--- a/src/styles.css
+++ b/src/styles.css
@@ -3,22 +3,24 @@ body {
     text-align: center;
   }
   
-#board {
+  #board {
     display: grid;
     grid-template-columns: repeat(8, 50px);
     grid-template-rows: repeat(8, 50px);
     margin: 20px auto;
     width: 400px;
     height: 400px;
-    border: 2px solid black;
   }
-  
   .cell {
     width: 50px;
     height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+  }
+  .cell.dragover {
+    outline: 2px dashed yellow;
   }
   
   .cell.black {
@@ -33,6 +35,7 @@ body {
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    cursor: grab;
   }
   
   .piece.player1 {
