--- a/src/styles.css
+++ b/src/styles.css
@@ -3,45 +3,55 @@ body {
     text-align: center;
   }
   
-  #board {
-    display: grid;
-    grid-template-columns: repeat(8, 50px);
-    grid-template-rows: repeat(8, 50px);
-    margin: 20px auto;
-    width: 400px;
-    height: 400px;
-  }
-  .cell {
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-  }
-  .cell.dragover {
-    outline: 2px dashed yellow;
-  }
-  
-  .cell.black {
-    background-color: rgb(183, 127, 37);
-  }
-  
-  .cell.white {
-    background-color: rgb(230, 160, 49);
-  }
-  
-  .piece {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    cursor: grab;
-  }
-  
-  .piece.player1 {
-    background-color: rgb(255, 255, 255);
-  }
-  
-  .piece.player2 {
-    background-color: rgb(0, 0, 0);
-  }
+#board {
+  display: grid;
+  grid-template-columns: repeat(8, 50px);
+  grid-template-rows: repeat(8, 50px);
+  margin: 20px auto;
+  width: 400px;
+  height: 400px;
+}
+#make-move-button {
+  margin: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.cell {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.cell.dragover {
+  outline: 2px dashed yellow;
+}
+
+.cell.black {
+  background-color: rgb(183, 127, 37);
+}
+
+.cell.white {
+  background-color: rgb(230, 160, 49);
+}
+
+.piece {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: grab;
+}
+
+.piece.player1 {
+  background-color: rgb(255, 255, 255);
+}
+
+.piece.player2 {
+  background-color: rgb(0, 0, 0);
+}
